--- a/package.json
+++ b/package.json
@@ -25,15 +25,14 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.6",
-    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.14.7",
     "@vue/compiler-sfc": "^3.1.5",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.2",
-    "css-loader": "^5.2.7",
+    "css-loader": "^3.6.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.24.0",
@@ -45,17 +44,17 @@
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.3.1",
-    "vue-cli-plugin-vue-next": "^0.1.4",
-    "vue-loader": "^16.3.1",
+    "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@vue/shared": "^3.1.5",
-    "vue": "^3.1.5"
+    "vue": "^2.6.14"
   }
 }
