--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
-    "@vue/compiler-sfc": "^3.1.5",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -55,6 +54,9 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@vue/shared": "^3.1.5",
+    "crypto-random-string": "^4.0.0",
+    "lodash": "^4.17.21",
+    "lowdb": "^1.0.0",
     "vue": "^2.6.14"
   }
 }
