--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "@babel/polyfill": "^7.12.1",
     "@vue/shared": "^3.1.5",
     "crypto-random-string": "^4.0.0",
-    "dayjs": "^1.10.7", 
+    "dayjs": "^1.10.7",
     "lodash": "^4.17.21",
     "lowdb": "^1.0.0",
+    "scroll-to": "0.0.2",
     "vue": "^2.6.14"
   }
-  
 }
