--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lowdb": "^1.0.0",
     "scroll-to": "0.0.2",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vuex": "^3.6.2"
   }
 }
